--- a/mappa-example.html
+++ b/mappa-example.html
@@ -18,7 +18,7 @@ const options = {
   lat: 49.2606,
   lng: -123.2460,
   zoom: 3,
-  style: "https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png"
+  style: "https://{s}.basemaps.cartocdn.com/rastertiles/light_all/{z}/{x}/{y}.png"
 }
 
 function setup(){
